Improved toolbar space css in order to have correct spacing for vertical ⁄btn groups

--- a/app/Resources/scss/bootstrap-corrections.scss
+++ b/app/Resources/scss/bootstrap-corrections.scss
@@ -23,11 +23,8 @@
 }
 
 .btn-toolbar .btn-group,
-.btn-toolbar .btn {
+.btn-toolbar .btn-group-vertical,
+.btn-toolbar > .btn {
   margin-top: 2px;
   margin-bottom: 2px;
-}
-.btn-toolbar .btn-group .btn {
-  margin-top: 0;
-  margin-bottom: 0;
 }
